--- a/Aula Css Avançado/Seletores/index.html
+++ b/Aula Css Avançado/Seletores/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seletores</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+
+        <h1 title="titulo teste 1">titulo 1</h1>
+        <h2 title="titulo teste 1">titulo 2</h2>
+        <h3 title="texto 12">titulo 3</h3>
+        <h4>titulo 4</h4>
+
+    <!-- <header id="headP">
+        <p>parágrafo no header 1</p>
+        <p>parágrafo no header 2</p>
+        <p>parágrafo no header 3</p>
+        <section>
+            <p>parágrafo no header 4</p>
+            <p>parágrafo no header 4</p>
+            <p>parágrafo no header 4</p>
+            <p>parágrafo no header 4</p>
+        </section>
+
+    </header>
+
+    <header>
+        <p title="paragrafo 1">parágrafo no header 1</p>
+        <p title="paragrafo 2 1">parágrafo no header 2</p>
+        <p title="paragrafo 1 3">parágrafo no header 3</p>
+        <p title="paragrafo 3">parágrafo no header 4</p>
+    </header>
+
+    <div class="divP">
+        <p>parágrafo 1</p>
+        <p>parágrafo 2</p>
+        <p>parágrafo 3</p>
+        <p>parágrafo 4</p>
+    </div>
+
+    <p>parágrafo no body 1</p>
+    <p>parágrafo no body 2</p>
+    <p>parágrafo no body 3</p>
+    <p>parágrafo no body 4</p> -->
+
+    <script src="./script.js">
+
+    </script>
+
 </body>
+
 </html>
